sign in with google and facebook

--- a/server/src/resources/views/index.hbs
+++ b/server/src/resources/views/index.hbs
@@ -10,6 +10,7 @@
 <body>
   <div id="container"></div>
   <script src="/assets/js/app/dist/app.js"></script>
+  <a href="/auth/facebook"><button class="button button-primary">Facebook</button></a></a>
 </body>
 
 </html>
